# Copper

./: .travis.yml  Cargo.toml  README.md  build.rs  client.bat  run.bat  server.bat
child/: .gitignore  Cargo.toml
child/src/: lib.rs  main.rs
parent/: Cargo.toml
parent/src/: lib.rs  main.rs
src/: main.rs
src/client/: mod.rs
src/common/: mod.rs
src/server/: mod.rs  structs.rs  util.rs
src/util/: mod.rs
tests/: fn_serialization_test.rs  fn_serializetion_deserialization_tests.rs  multiple_clients_load.rs  parallel_server.rs
