[package]
name = "copper"
version = "0.1.0"
authors = ["Tsvetelin Kostadinov <tsvetelinkostadinovts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.123"
serde_json = "1.0.62"
serde_closure = "0.3.2"
serde_traitobject = "0.2.7"
